--- a/app/templates/inc/benefits.html
+++ b/app/templates/inc/benefits.html
@@ -7,8 +7,7 @@
             <div class="col-md-4 mb-4">
                 <div class="benefit-card p-4 shadow-lg rounded-4 text-center">
                     <div class="icon-container mb-3">
-                        <i class="bi bi-graph-up fa-4x p-3 rounded-circle text-white"
-                            style="background-color: #007bff;"></i>
+                        <i class="bi bi-graph-up fa-4x p-3 rounded-circle text-white"></i>
                     </div>
                     <h5 class="mb-3">Lenguaje comprensible</h5>
                     <p class="text-muted">In-depth insights on SEO, domain metrics, and backlinks.</p>
@@ -17,8 +16,7 @@
             <div class="col-md-4 mb-4">
                 <div class="benefit-card p-4 shadow-lg rounded-4 text-center">
                     <div class="icon-container mb-3">
-                        <i class="bi bi-shield-check fa-4x p-3 rounded-circle text-white"
-                            style="background-color: #28a745;"></i>
+                        <i class="bi bi-shield-check fa-4x p-3 rounded-circle text-white"></i>
                     </div>
                     <h5 class="mb-3">Informes profesionales y compactos</h5>
                     <p class="text-muted">Generate professional reports and share them easily.</p>
@@ -27,8 +25,7 @@
             <div class="col-md-4 mb-4">
                 <div class="benefit-card p-4 shadow-lg rounded-4 text-center">
                     <div class="icon-container mb-3">
-                        <i class="bi bi-file-earmark-text fa-4x p-3 rounded-circle text-white"
-                            style="background-color: #ffc107;"></i>
+                        <i class="bi bi-file-earmark-text fa-4x p-3 rounded-circle text-white"></i>  <!-- style="background-color: #ffc107;" -->
                     </div>
 
                     <h5 class="mb-3">Seguro y Privado</h5>
