--- a/app/templates/tools/usability/usability_results.html
+++ b/app/templates/tools/usability/usability_results.html
@@ -278,7 +278,7 @@
 </div>
 
 <div id="report" class="container-fluid position-relative mt-4 mb-5">
-    {% if not current_user.subscription_plan or current_user.subscription_plan == 'Free' %}
+    {% if not current_user.subscription_plan or current_user.subscription_plan == 'Free' or not current_user.is_subscription_active() %}
     <!-- Overlay to blur content for free or no subscription -->
     <div class="overlay">
         <div class="text-center">
