--- a/app/templates/tools/domains/results_domains.html
+++ b/app/templates/tools/domains/results_domains.html
@@ -283,7 +283,9 @@
         <div class="text-center">
             <i class="fas fa-lock fa-3x mb-3"></i>
             <h3>You need to upgrade your plan to access this feature.</h3>
+            {% include "inc/suscriptions.html" %}
         </div>
+       
     </div>
     {% endif %}
 
