--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -18,6 +18,7 @@
   {% include 'inc/navbar.html' %}
 </header>
 
+{% if current_user.is_authenticated %}
 {% if not current_user.subscription_plan == 'Free' and not current_user.is_subscription_active() %}
 <div class="row flash_message">
   <div class="alert alert-warning text-center" role="alert">
@@ -25,4 +26,5 @@
   </div>
 
 </div>
+{% endif %}
 {% endif %}
